--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -36,17 +36,31 @@ body {
 //     transform: rotate(360deg);
 //   }
 // }
-#background-video{
 
-height: 100vh;
-width: 100%;
-float: left;
-top: 0;
-padding: none;
-position: fixed; /* optional depending on what you want to do in your app */
-
-
+.video-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%; 
+  overflow: hidden;
 }
+.video-container video {
+  /* Make video to at least 100% wide and tall */
+  min-width: 100%; 
+  min-height: 100%; 
+
+  /* Setting width & height to auto prevents the browser from stretching or squishing the video */
+  width: auto;
+  height: auto;
+
+  /* Center the video */
+  position: absolute;
+  top: 50%;
+  left: 45%;
+  transform: translate(-50%,-50%);
+}
+
 .searchInput{
   font-family: inherit;
 }
