--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -1,8 +1,24 @@
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(155, 155, 155, 0);
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(59, 59, 59, 0.281);
+  border-radius: 10px;
+}
 body {
   text-align: center;
     background-color: black;
   color: black;
-  overflow: hidden;
+  overflow:auto;
 }
 
 // .App-logo {
@@ -41,14 +57,14 @@ body {
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 100%;
-  height: 100%; 
+  width: 100vw;
+  height: 100vh; 
   overflow: hidden;
 }
 .video-container video {
   /* Make video to at least 100% wide and tall */
-  min-width: 100%; 
-  min-height: 100%; 
+  min-width: 100vw; 
+  min-height: 100vh; 
 
   /* Setting width & height to auto prevents the browser from stretching or squishing the video */
   width: auto;
@@ -198,4 +214,21 @@ outline:none
     transform: rotateX(0deg) skewX(0deg);
   }
 }
+
+//########################### FLOAT UP ###########################
+
+p {
+  animation-duration: 2.2s;
+  animation-name: slidein;
+}
+@keyframes slidein {
+  from {
+    padding-top:10px;
+    opacity: 0%; 
+  }
+  to {
+    opacity:100%;
+  }
+}
+//########################### FLOAT UP ###########################
 
