--- a/src/components/topButton/Top.css
+++ b/src/components/topButton/Top.css
@@ -19,8 +19,8 @@
     transition: 0.3s ease 0s;
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
     #topButton {
         display: none;
     }
-}
+} */
