--- a/src/style/index.css
+++ b/src/style/index.css
@@ -6,7 +6,7 @@ font-family: 'Zen Kurenaido', cursive!important;
   -moz-osx-font-smoothing: grayscale;
     margin: 0;
   background-color: #121314;
-}
+overflow: hidden}
 
 html {
   scroll-behavior: smooth;
