--- a/src/components/AchievementCard/AchievementCard.css
+++ b/src/components/AchievementCard/AchievementCard.css
@@ -4,6 +4,8 @@
     box-shadow: 13px 13px 6px rgba(0,0,0,0.2);
     padding: 30px;
     margin-bottom: 30px;
+    	z-Index: 5;
+
 }
 .achieve-card:hover {
     transition: 0.3s ease-out;
