--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,20 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
 
 body {
-font-family: 'Zen Kurenaido', cursive!important;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-    margin: 0;
-  background-color: #121314;
-overflow: hidden}
+	font-family: 'Zen Kurenaido', cursive !important;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	background-color: #121314;
+	overflow: hidden;
+}
 
 html {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 ::-webkit-scrollbar {
 	width: 5px;
