--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,8 +1,7 @@
 .section--contact {
 	margin: 50px 0;
 	padding: 110px 20px 0;
-	z-index: 1;
-	position: relative;
+
 }
 .section--contact .contact-title {
 	max-width: 1600px;
@@ -19,7 +18,6 @@
 }
 .section--contact .wrapper-inner {
 	flex: 85% 1;
-    	z-Index: 1;
 }
 .section--contact .contact-subtitle {
 	font-size: 25px;
@@ -33,10 +31,10 @@
 	font-weight: 500;
 	color: #c1c2c3;
 }
-.section--contact .social-links {
-	margin-top: 50px;
+.social-links {
 	z-index:5;
 	position: relative;
+	margin-left:10px;
 }
 .section--contact .profile-img {
 	flex: 15% 1;
@@ -48,13 +46,13 @@
 	border: 5px solid #212223;
 	border-radius: 100%;
 	box-shadow: 0px 5px 12px 5px rgba(0, 0, 0, 0.3);
-	z-index: 5;
+	position: relative;
+	z-index:5;
 }
 
 .section--contact .profile-img img:hover {
 	transition: 0.2s ease-out;
 	box-shadow: 0 4px 8px rgba(38, 38, 38, 0.2);
-	z-index: 5;
 }
 
 @media screen and (max-width: 1380px) {
