--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -53,10 +53,24 @@
 
 body {
 	background-color: black;
-	color: rgba(169, 169, 169, 0.022);
+	color: rgba(169, 169, 169, 0.04);
 	overflow: auto;
 }
 
+.characters {
+	position: fixed;
+	font-size: 2rem;
+	line-height: 34px;
+	word-wrap: break-word;
+	font-family: monospace;
+	user-select: none;
+	width: 100vw;
+	height: 100vh;
+	z-index:1;
+}
+.z-index-5 {
+  z-index: 5;
+}
 .App-header {
 	background-color: #282c34;
 	display: flex;
@@ -82,9 +96,10 @@ body {
 .glitch {
 	color: rgb(223, 191, 191);
 	position: relative;
-	font-size: 9vw;
+	font-size: 10vw;
 	// margin: 70px 200px;
 	animation: glitch 5s 5s infinite;
+	font-family: arial,sans-serif;
 }
 
 .glitch::before {
@@ -189,7 +204,7 @@ body {
 	letter-spacing: 1em;
 	text-align: center;
 	position: absolute;
-	left: -120%;
+	left: -84%;
 	animation: glitch-2 5s 5.02s infinite;
 }
 
